[project]
name = "job-engine"
version = "0.1.0"
description = "AI-powered opportunity finder: VC, grants, jobs - optimized for minimum effort, maximum return"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph - cutting edge agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",

    # Vector DB - semantic memory
    "chromadb>=0.5.0",

    # LLM APIs
    "openai>=1.50.0",

    # Search APIs
    "httpx>=0.27.0",

    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data handling
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Async
    "asyncio>=3.4.3",
    "aiohttp>=3.10.0",

    # Utils
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
job-engine = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
