[project]
name = "job-engine"
version = "0.2.0"
description = "Find opportunities. Ranked by $/hour."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
]

[project.scripts]
job-engine = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
